infra/deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tictactoe
  labels:
    name: tictactoe
    environment: production
